; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_wasapi.c_GetDeviceFlow.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_wasapi.c_GetDeviceFlow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IID_IMMEndpoint = common dso_local global i32 0, align 4
@eAll = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @GetDeviceFlow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetDeviceFlow(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @IMMDevice_QueryInterface(i32* %7, i32* @IID_IMMEndpoint, i8** %4)
  %9 = call i64 @FAILED(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %25

12:                                               ; preds = %1
  %13 = load i8*, i8** %4, align 8
  %14 = bitcast i8* %13 to i32*
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @IMMEndpoint_GetDataFlow(i32* %15, i32* %6)
  %17 = call i64 @SUCCEEDED(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %12
  %20 = load i32, i32* @eAll, align 4
  store i32 %20, i32* %6, align 4
  br label %21

21:                                               ; preds = %19, %12
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @IMMEndpoint_Release(i32* %22)
  %24 = load i32, i32* %6, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %21, %11
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @IMMDevice_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i64 @SUCCEEDED(i32) #1

declare dso_local i32 @IMMEndpoint_GetDataFlow(i32*, i32*) #1

declare dso_local i32 @IMMEndpoint_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
